# usbmonitor

./: .azure-pipelines.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
src/usbmonitor/: __init__.py  cli.py  main.py
src/usbmonitor/usb/: __init__.py  device_tree.py
tests/: test_device_tree.py
